# python-fastapi-demo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  makefile  pyproject.toml  requirements.txt
app/: main.py
resources/: postman_collection.json
